--- a/Client/Users/Main/Users.xaml
+++ b/Client/Users/Main/Users.xaml
@@ -19,7 +19,7 @@
                 </Grid.RowDefinitions>
 
                 <Label x:Name="NameUser"
-                       Text=""
+
                        HorizontalOptions="End"
                        VerticalOptions="Start"
                        Margin="10"
@@ -55,14 +55,14 @@
                             Margin="0,10,0,0"
                             Style="{DynamicResource ButtonStyle}" />
 
-                    <Button x:Name="SettingsButton"
+                    <!--<Button x:Name="SettingsButton"
                             Text="Настройки"
                             WidthRequest="320"
                             Clicked="SettingsButtonClicked"
                             VerticalOptions="Start"
                             HorizontalOptions="CenterAndExpand"
                             Margin="0,10,0,0"
-                            Style="{DynamicResource ButtonStyle}" />
+                            Style="{DynamicResource ButtonStyle}" />-->
                 </StackLayout>
 
                 <Button Grid.Row="3"
